# workdg

./: .env  .env_example  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
mailapp/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailapp/management/commands/: start_mailing.py
mailapp/migrations/: 0001_initial.py
mailapp/templates/mailapp/: base.html  index.html  mail_message_confirm_delete.html  mail_message_detail.html  mail_message_form.html  mail_message_list.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  recipient_mail_confirm_delete.html  recipient_mail_detail.html  recipient_mail_form.html  recipient_mail_list.html
mailapp/templates/mailapp/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: create_admin.py  create_group_manager.py
users/migrations/: 0001_initial.py
users/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
users/templates/users/: login.html  profile_detail.html  profile_edit.html  register.html  user_list.html
