[tool.poetry]
name = "workdg"
version = "0.1.0"
description = ""
authors = ["1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
ipython = "^9.0.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
